<resources>
    <string name="app_title">Fitness Fiend</string>
    <string name="app_logo_description">Fitness Fiend Logo</string>
    <string name="register_btn_text">Register</string>
    <string name="submit_btn_text">Submit</string>
    <string name="copyright_2020_text">Copyright -</string>
    <string name="password_label_text">Password:</string>
    <string name="username_label_text">Email:</string>
    <string name="login_screen_error_msg">"Username and/or password not filled in."</string>
    <string name="login_screen_error_msg_authFailed">"Username and/or password is not correct."</string>
    <string name="register_screen_error_msg">"One or more fields was not supplied."</string>
    <string name="register_screen_error_msg_authFailed">"Failed to create new user."</string>
    <string name="register2_screen_error_msg_authFailed">"Something went wrong with the authorization."</string>
    <string name="title_activity_registration_1">Registration_1</string>
    <string name="app_name">FitnessFiend</string>
    <string name="next_btn_text">Next</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="height_label">Height (in inches)</string>
    <string name="weight_label">Weight (in pounds)</string>
    <string name="fitness_cardview_lbl_text">Fitness</string>
    <string name="macros_cardview_lbl_text">Macros</string>
    <string name="gym_maps_cardview_lbl_text">Gym Maps</string>
    <string name="recipes_cardview_lbl_text">Recipes</string>
    <string name="Progress_Dialog_Macros_Msg">Please wait… We are retrieving your food.</string>
    <string name="macrosURL">https://edamam-food-and-grocery-database.p.rapidapi.com/parser?ingr=%s</string>
    <string name="macrosHOST">edamam-food-and-grocery-database.p.rapidapi.com</string>
    <string name="macrosAPI_KEY">f2ba81e558mshf4a60987844ca99p1cd274jsnecc041aa50cb</string>
    <string name="food_not_found_msg">Food not found.</string>
    <string name="cannot_access_food_msg">Something went wrong accessing your food.</string>
    <string name="title_activity_gym_maps2">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_food_btn_symbol">+</string>
    <string name="main_screen_loading_error_msg">There was an error loading the main screen.</string>
    <string name="fitness_button_main_screen_cd">fitness button</string>
    <string name="macros_button_main_screen_cd">macros button</string>
    <string name="recipes_button_main_screen_cd">recipes button</string>
    <string name="gym_maps_button_main_screen_cd">gym maps button</string>
    <string name="reminders_button_main_screen_cd">reminders button</string>
    <string name="settings_button_main_screen_cd">settings button</string>
    <string name="breakfast_title_macros">Breakfast</string>
    <string name="lunch_title_macros">Lunch</string>
    <string name="dinner_title_macros">Dinner</string>
    <string name="other_meals_title_macros">Other meal(s)</string>
    <string name="macros_title">Macros Diary</string>
    <string name="food_dialog_hint">Food</string>
    <string name="amount_dialog_hint">Amount</string>
    <string name="add_food_button_cd">Add Food Button</string>
    <string name="list_of_food_items_label_txt">List of Food Items:</string>
    <string name="history_button_macros">history button</string>
    <string name="macros_history_title">Macros History</string>
    <string name="macros_goals_title">Macros Goals</string>
    <string name="protein_registration_label">Protein</string>
    <string name="fats_registration_label">Fats</string>
    <string name="carbs_registration_label">Carbs</string>
    <string name="protein_in_grams_hint">Protein (in grams)</string>
    <string name="fats_in_grams_hint">Fats (in grams)</string>
    <string name="carbs_in_grams_hint">Carbs (in grams)</string>
    <string name="goals_for_day_macros_label">Goals For Day</string>
    <string name="total_calories_macros_history_lbl">Total Calories:</string>
    <string name="total_protein_macros_history_lbl">Total Protein:</string>
    <string name="total_carbs_macros_history_lbl">Total Carbs:</string>
    <string name="total_fats_macros_history_lbl">Total Fats:</string>
    <string name="met_calorie_goal_macros_history_lbl">Met Calorie Goal:</string>
    <string name="met_protein_goal_macros_history_lbl">Met Protein Goal:</string>
    <string name="met_fats_goal_macros_history_lbl">Met Fats Goal:</string>
    <string name="met_carbs_goal_macros_history_lbl">Met Carbs Goal:</string>
    <string name="go_back_btn_text">Go Back</string>
    <string name="view_history_gym_btn_label">View History</string>
    <string name="add_gym_btn_label">Add Gym</string>
    <string name="search_btn_gym_label">SEARCH</string>
    <string name="search_gym_hint">Enter gym name, then city…</string>
    <string name="gym_title">Gym Finder</string>
    <string name="gym_history_title">Gym History</string>
    <string name="still_going_chkbx_history_msg">Still Going?</string>
    <string name="fitness_tracker_title">Fitness Tracker</string>
    <string name="fitness_day_dropdown_label">Choose A Day</string>
    <string name="day_label_text">DAY:</string>
    <string name="choose_exercise_label_text">Choose Exercise:</string>
    <string name="workout_type_label_text">Choose Workout Type</string>
    <string name="workout_type_label">Workout Type:</string>
    <string name="insert_workout_title_text"><![CDATA[<u>Insert Workout</u>]]></string>
    <string name="add_workout_btn_text">Add</string>
    <string name="rest_period_label_text">Rest Period:</string>
    <string name="rest_period_hint">time in minutes</string>
    <string name="duration_hint">time in minutes</string>
    <string name="duration_label_text">Duration:</string>
    <string name="reps_hint">number of reps</string>
    <string name="reps_label_text">Reps:</string>
    <string name="sets_hint">number of sets</string>
    <string name="sets_label_text">Sets:</string>
    <string name="choose_btn_text">Choose</string>
    <string name="view_workouts_title_text">View Workouts</string>
    <string name="remove_exercise_btn_txt">Remove</string>
    <string name="view_fitness_screen_content_desc">View Fitness Screen</string>
    <string name="title_activity_recipes">recipes</string>
    <string name="tab_text_1">Search</string>
    <string name="tab_text_2">Liked</string>
    <string name="tab_text_3">History</string>
    <string name="tvIngredients">Ingredients</string>
    <string name="tvNutrients">Nutrients</string>
    <string name="TvLink">Click here to view the full recipe</string>
    <string name="RecipeModuleTitle">Recipe Finder</string>
    <string name="cbLiked">Like This Recipe</string>
    <string name="tvLiked">Liked:</string>
    <string name="btnLiked">Search</string>
    <string name="tvHistory">History:</string>
    <string name="btnHistory">Search</string>
    <string name="btnClear">Clear</string>
    <string name="logout_button_text">Logout</string>
    <string name="settings_title">Settings</string>
    <string name="change_email_title_text">Change Email</string>
    <string name="change_password_title">Change Password</string>
    <string name="gender_label">Gender</string>
    <string name="age_label">Age</string>
    <string-array name="fitness_day_dropdown_choices">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="workout_type_dropdown_choices">
        <item>Vigorous Resistance Training</item>
        <item>Moderate Resistance Training</item>
        <item>Lighter Resistance Training</item>
        <item>Vigorous Cardiovascular Training</item>
        <item>Moderate Cardiovascular Training</item>
        <item>Lighter Cardiovascular Training</item>
        <item>Vigorous Calisthenics Training</item>
        <item>Moderate Calisthenics Training</item>
        <item>Lighter Calisthenics Training</item>
    </string-array>
    <string-array name="leg_resistance_training_exercise_list">
        <item>Farmer\'s carries</item>
        <item>Deadlifts</item>
        <item>Romanian Deadlifts</item>
        <item>Sumo Deadlifts</item>
        <item>Snatch-Grip Deadlifts</item>
        <item>Deficit Deadlifts</item>
        <item>Back Squats</item>
        <item>Pistol Squats</item>
        <item>Front Squats</item>
        <item>Hack Squats</item>
        <item>Goblet Squats</item>
        <item>Hip Thrusts</item>
        <item>Barbell Lunges</item>
        <item>Dumbbell Reverse Lunges</item>
        <item>Dumbbell Squats</item>
        <item>Dumbbell Lunges</item>
        <item>Dumbbell Reverse Lunges</item>
        <item>Dumbbell Bulgarian Split Squats</item>
        <item>Machine Leg Presses</item>
        <item>Machine Squats</item>
        <item>Machine Hack Squats</item>
        <item>Glute/Hamstring Developer Machine</item>
        <item>Hip Adduction Machine</item>
        <item>Hip Abduction Machine</item>
        <item>Weighted Sled Cart Push</item>
    </string-array>
    <string-array name="shoulder_resistance_training_exercise_list">
        <item>Barbell Overhead Press</item>
        <item>Barbell Front Raises</item>
        <item>Barbell Shrugs</item>
        <item>Dumbbell Overhead Press</item>
        <item>Dumbbell Lateral Raises</item>
        <item>Dumbbell Bent Over Trap Raises</item>
        <item>Dumbbell Shrugs</item>
        <item>Dumbbell UCV Raises</item>
        <item>Cable Lateral Raises</item>
        <item>Cable Trap Raises</item>
        <item>Cable UCV Raises</item>
        <item>Machine Lateral Raises</item>
        <item>Machine Overhead Press</item>
        <item>Machine Shoulder Press</item>
        <item>Machine Rear Delt Fly</item>
        <item>Rope Face Pulls</item>
    </string-array>
    <string-array name="bicep_resistance_training_exercise_list">
        <item>Dumbbell Bicep Curls</item>
        <item>Dumbbell Reverse Curls</item>
        <item>Dumbbell Hammer Curls</item>
        <item>Dumbbell Cross-Hammer Curls</item>
        <item>Dumbbell Concentration Curls</item>
        <item>Dumbbell Zottman Curls</item>
        <item>Dumbbell Eccentric Curls</item>
        <item>Spider Dumbbell Bicep Curls</item>
        <item>Spider Dumbbell Reverse Curls</item>
        <item>Spider Dumbbell Hammer Curls</item>
        <item>Cable Single-hand Bicep Curls</item>
        <item>Cable Single-hand Reverse Curls</item>
        <item>Cable Single-hand Hammer Curls</item>
        <item>Cable Single-hand Spider Curls</item>
        <item>Barbell Bicep Curls</item>
        <item>Barbell Reverse Curls</item>
        <item>Spider Barbell Bicep Curls</item>
        <item>Spider Barbell Reverse Curls</item>
        <item>Cable Bicep Curls</item>
        <item>Cable Reverse Curls</item>
        <item>Cable Hammer Curls</item>
        <item>Cable Spider Curls</item>
        <item>Machine Bicep Curls</item>
    </string-array>
    <string name="settings_reminders_checkbox_text">Reminders</string>
    <string name="settings_gym_maps_checkbox_text">Gym Maps</string>
    <string name="settings_recipe_checkbox_text">Recipe</string>
    <string name="settings_macros_checkbox_text">Macros</string>
    <string name="settings_fitness_checkbox_text">Fitness</string>
</resources>