<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration_Macros"
    android:orientation="vertical"
    android:background="@drawable/custom_background">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_app_logo_reg_page"
        android:contentDescription="@string/app_logo_description"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/regcaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/registration_caption"
        android:contentDescription="@string/app_logo_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/custom_background_macros_registration"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/macros_goals_title"
            android:textSize="40sp"
            android:textColor="#000000"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protein_registration_label"
            android:textSize="25sp"
            android:textColor="#FFFFFF"/>
        <EditText
            android:id="@+id/protein_goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/protein_in_grams_hint"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:autofillHints=""/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fats_registration_label"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/fat_goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/fats_in_grams_hint"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:autofillHints=""/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carbs_registration_label"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/carbs_goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/carbs_in_grams_hint"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:autofillHints=""/>
    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/button_minimum_width_registration1"
        android:textColor="@color/common_google_signin_btn_text_light_pressed"
        android:textSize="@dimen/button_text_size"
        android:background="@drawable/custom_button"
        android:text="@string/submit_btn_text"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
</LinearLayout>