<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fitness"
    android:orientation="vertical"
    android:id="@+id/main_layout">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fitness_tracker_title"
        android:textSize="40sp"
        android:background="@color/appThemeColor"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:gravity="center"
        style="@style/TitleTextShadow"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/insert_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/appThemeColor"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageButton
            android:id="@+id/navigation_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/view_fitness_screen_content_desc"
            android:src="@drawable/fitnessicon"
            android:background="@null"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/select_day_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_label_text"
            android:textSize="30sp"
            android:textColor="@color/appThemeColor"
            android:textStyle="bold"/>
        <!--Dynamic DatePicker-->
        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/appThemeColor"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/select_workout_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_type_label"
            android:textSize="30sp"
            android:textColor="@color/appThemeColor"
            android:textStyle="bold"/>
        <Spinner
            android:id="@+id/workout_type"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:entries="@array/workout_type_dropdown_choices"
            android:prompt="@string/workout_type_label"
            android:textSize="25sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/choose_an_exercise_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/choose_exercises_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_exercise_label_text"
            android:textSize="30sp"
            android:textColor="@color/appThemeColor"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/full_workout_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/common_google_signin_btn_text_light_pressed"
            android:textSize="@dimen/button_text_size"
            android:background="@drawable/custom_button"
            android:text="@string/choose_btn_text"/>
    </LinearLayout>
    <TextView
        android:id="@+id/exercise_chosen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textColor="@color/appThemeColor"
        android:textAlignment="center"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sets_label_text"
            android:textColor="@color/appThemeColor"
            android:textSize="30sp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/sets"
            android:autofillHints=""
            android:hint="@string/sets_hint"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps_label_text"
            android:textColor="@color/appThemeColor"
            android:textSize="30sp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/reps"
            android:autofillHints=""
            android:hint="@string/reps_hint"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_label_text"
            android:textColor="@color/appThemeColor"
            android:textSize="30sp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/duration"
            android:autofillHints=""
            android:hint="@string/duration_hint"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest_period_label_text"
            android:textColor="@color/appThemeColor"
            android:textSize="30sp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/rest_period"
            android:autofillHints=""
            android:hint="@string/rest_period_hint"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/add_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/common_google_signin_btn_text_light_pressed"
        android:textSize="@dimen/button_text_size"
        android:background="@drawable/custom_button"
        android:text="@string/add_workout_btn_text"
        android:layout_gravity="center"/>
</LinearLayout>