<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".macros_history"
    android:orientation="vertical">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/macros_history_title"
        android:textSize="40sp"
        android:background="@color/appThemeColor"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:gravity="center"
        style="@style/TitleTextShadow"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/appThemeColor"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@color/appThemeColor">
        <TextView
            android:id="@+id/total_cals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_calories_macros_history_lbl"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/met_goal_cals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/met_calorie_goal_macros_history_lbl"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@color/appThemeColor">
        <TextView
            android:id="@+id/total_protein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_protein_macros_history_lbl"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/met_goal_protein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/met_protein_goal_macros_history_lbl"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@color/appThemeColor">
        <TextView
            android:id="@+id/total_fats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_fats_macros_history_lbl"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/met_goal_fats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/met_fats_goal_macros_history_lbl"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@color/appThemeColor">
        <TextView
            android:id="@+id/total_carbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_carbs_macros_history_lbl"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/met_goal_carbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/met_carbs_goal_macros_history_lbl"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/go_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/go_back_btn_text"
        android:background="@color/appThemeColor"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"/>
</LinearLayout>